--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 language: java
-jdk: oraclejdk8
+jdk:
+  - oraclejdk7
+  - openjdk7
 install: mvn install -Dmaven.compiler.target=3.6.1 -Dmaven.compiler.source=3.6.1 -DskipTests=false
 script:
     - mvn compile -Dmaven.compiler.target=3.6.1 -Dmaven.compiler.source=3.6.1
