--- a/pom.xml
+++ b/pom.xml
@@ -106,13 +106,6 @@
 			<scope>test</scope>
 		</dependency>
 
-		<!-- postgres database -->
-		<dependency>
-			<groupId>org.postgresql</groupId>
-			<artifactId>postgresql</artifactId>
-			<version>9.3-1102-jdbc41</version>
-		</dependency>
-
 		<dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-webmvc</artifactId>
@@ -148,6 +141,13 @@
             <artifactId>spring-security-web</artifactId>
             <version>${org.springframework.security-version}</version>
         </dependency>
+
+		<!-- SQLite, the best one -->
+        <dependency>
+			<groupId>org.xerial</groupId>
+			<artifactId>sqlite-jdbc</artifactId>
+            <version>3.8.11.2</version>
+		</dependency>
 
 		<!-- hibernate -->
 		<dependency>
