--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -15,12 +15,14 @@
 	<servlet>
 		<servlet-name>mvc-dispatcher</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+		<!-- Init context by default  
 		<init-param>
 			<param-name>contextConfigLocation</param-name>
 			<param-value>
 				/WEB-INF/applicationContext.xml
 			</param-value>
 		</init-param>
+		-->
 		<load-on-startup>1</load-on-startup>
 	</servlet>
 
@@ -28,7 +30,6 @@
 		<servlet-name>mvc-dispatcher</servlet-name>
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
-
 
 	<filter>
 		<filter-name>springSecurityFilterChain</filter-name>
@@ -39,7 +40,6 @@
 		<filter-name>springSecurityFilterChain</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
-
 
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
