UserDao unit test passing

--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,8 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.6.1</version>
+                <!-- I use version 3.5.0 because this is the latest docker version -->
+                <version>3.5</version>
                 <configuration>
                     <source>${java-version}</source>
                     <target>${java-version}</target>
